[package]
name = "garlic_crust"
version = "0.1.0"
authors = ["qm210 <quantenmace@gmail.com>"]
edition = "2018"

[features]
logger = []
fullscreen = []

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = 'abort'

[profile.dev]
lto = true
opt-level = 0
panic = "abort"

[dependencies]
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "processthreadsapi", "fileapi", "handleapi", "mmreg", "mmsystem", "mmeapi" ] }
libm = "0.2.1"
libc = "0.2.93"
midly = { version = "0.5.1", default-features = false, features = [] }
# heapless = "0.6.1"
# cty = "0.2.1" # for C types as c_double (for printf), but this is the same as f64
# ryu = "1.0.5" # fast float-string-conversion
# glam = { version = "0.13.0", default-features = false, features = ["libm"] } # in case we want their smoothstep or something
half = "1.7.1"
heapless = "0.6.1"
rustop = "1.1.1"
pest_derive = "2.1.0"
pest = "2.1.3"

# cty = "0.2.1"
# printf-compat = { version = "0.1.1", default-features = false }

[[bin]]
name="knober"
path="src/knober/knober.rs"
